tests/negative/test_sizeof_undef_arr.orb
data Foo;

fnc main () () {
    sizeOf (Foo 2);
};